# axum-diesel-example

./: .dockerignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
assets/: 400.html  404.html  409.html  418.html  500.html
migrations/2024-06-19-120816_demo/: down.sql  up.sql
src/: api.rs  db.rs  lib.rs  main.rs  schema.rs  util.rs
src/api/: error.rs  router.rs  routes.rs
src/api/routes/: demo.rs  healthcheck.rs
src/model/: demo.rs
src/util/: app_state.rs  config.rs  env.rs  error.rs  exit.rs  tracing.rs
