[package]
name = "axum-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"

[dependencies]
axum = { version = "0.7.5", features = [
  "macros",
  "tracing",
  "query",
  "json",
  "tokio",
] }
bb8 = "0.8.3"
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.8.0", features = ["v4", "macro-diagnostics", "serde"] }
diesel = { version = "2.1.6", features = [
  "postgres",
  "without-deprecated",
  "uuid",
  "chrono",
] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
diesel-async = { version = "0.4.1", features = ["postgres", "bb8"] }
dotenvy = "0.15.7"
nu-ansi-term = "0.50.0"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
thiserror = "1.0.60"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower = { version = "0.4.13", features = ["timeout"] }
