[package]
name = "axum-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"

[dependencies]
axum = { version = "0.7", features = [
  "macros",
  "tracing",
  "query",
  "json",
  "tokio",
] }
bb8 = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "macro-diagnostics", "serde"] }
diesel = { version = "2", features = [
  "postgres",
  "without-deprecated",
  "uuid",
  "chrono",
] }
diesel_migrations = { version = "2", features = ["postgres"] }
diesel-async = { version = "0.4", features = ["postgres", "bb8"] }
dotenvy = "0.15"
nu-ansi-term = "0.50"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.5", features = ["timeout"] }
